--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -22,8 +22,10 @@ jobs:
       
       - name: Generate Requirements
         run: |
-          pip install pipreqs
-          python -m  pipreqs.pipreqs
+          python -m pip install pipenv
+          pipenv install
+        # pip install pipreqs
+        # python -m  pipreqs.pipreqs
       
       - uses: actions/setup-python@v4
         with:
