--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -21,17 +21,20 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Generate Requirements
-        run: |
-          python -m pip install pipenv
-          pipenv --python 3.10.8 install
-        # pip install pipreqs
-        # python -m  pipreqs.pipreqs
+        # run: |
+        # python -m pip install pipenv
+        # pipenv --python 3.10.8 install
+        ## pip install pipreqs
+        ## python -m  pipreqs.pipreqs
       
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10.8'
           cache: 'pip' # caching pip dependencies
-      - run: pip install -r requirements.txt
+      - run: |
+          python -m pip install pipenv
+          pipenv --python 3.10.8 install
+        # pip install -r requirements.txt
       
       - name: Install Missing Python dependencies
         run: |
