--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -21,12 +21,10 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Generate Requirements
-        # run: |
-        # python -m pip install pipenv
-        # pipenv --python 3.10.8 install
-        ## pip install pipreqs
-        ## python -m  pipreqs.pipreqs
-      
+        run: |
+          python -m pip install pipenv
+          pipenv install --ignore-pipfile
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10.8'
@@ -38,15 +36,8 @@ jobs:
       
       - name: Install Missing Python dependencies
         run: |
-          python -m pip install --upgrade pip pandas
-          python -m pip install --upgrade pip numpy
-          pip install -U kaleido
-          pip install -U asyncio
-          pip install -U aiohttp
-          pip install -U nest_asyncio
-          pip install -U subgrounds
-          pip install -U jupyter
-          pip install -U nbconvert
+          python -m pip install --upgrade pip pandas numpy
+          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert
 
   # Generate .py files for each notebook
       - name: Generate py files
@@ -58,11 +49,11 @@ jobs:
 
   # Incentives Attribution
       - name: Update OP Incentives Attribution
-        run: op_rewards_tracking/op_incentives_program_attribution.py
+        run: python op_rewards_tracking/op_incentives_program_attribution.py
   
   # Incentives Program Summary
       - name: Update OP Incentives Attribution
-        run: op_rewards_tracking/op_incentive_program_summary.py
+        run: python op_rewards_tracking/op_incentive_program_summary.py
  
         
   # commit_results:
