--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -25,13 +25,13 @@ jobs:
           python -m pip install pipenv
           pipenv install --ignore-pipfile
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10.8'
-          cache: 'pip' # caching pip dependencies
-      - run: |
-          python -m pip install pipenv
-          pipenv --python 3.10.8 install
+#       - uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.10.8'
+#           cache: 'pip' # caching pip dependencies
+#       - run: |
+#           python -m pip install pipenv
+#           pipenv --python 3.10.8 install
       
       - name: Install Missing Python dependencies
         run: |
