--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -20,18 +20,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
-      - name: Generate Requirements
+      - name: Install pipenv
         run: |
           python -m pip install pipenv
-          pipenv install --ignore-pipfile
 
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: '3.10.8'
-#           cache: 'pip' # caching pip dependencies
-#       - run: |
-#           python -m pip install pipenv
-#           pipenv --python 3.10.8 install
+      - name: Install Dependencies
+        run: |
+          pipenv install --dev
       
       - name: Install Missing Python dependencies
         run: |
