--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -20,6 +20,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+
       - name: Install pipenv
         run: |
           python -m pip install pipenv
