--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -38,14 +38,9 @@ jobs:
           python -m pip install --upgrade pip pandas numpy
           pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert
 
-      - name: Change directory to op_rewards_tracking
-        run: |
-          cd op_rewards_tracking 
-          echo "Current directory: $(pwd)" 
-          ls
-        shell: bash
   # Generate .py files for each notebook
       - name: Generate py files
+        working-directory: op_rewards_tracking
         run: |
           jupyter nbconvert --to python op_incentives_program_attribution.ipynb
           jupyter nbconvert --to python op_incentive_program_summary.ipynb
@@ -54,10 +49,12 @@ jobs:
 
   # Incentives Attribution
       - name: Update OP Incentives Attribution
+        working-directory: op_rewards_tracking
         run: python op_incentives_program_attribution.py
   
   # Incentives Program Summary
       - name: Update OP Incentives Summary
+        working-directory: op_rewards_tracking
         run: python op_incentive_program_summary.py
  
         
