--- a/.github/workflows/value_locked_flows_update.yml
+++ b/.github/workflows/value_locked_flows_update.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Install Dependencies
         run: |
           pipenv install --dev
+      
+      - name: Install Missing Python dependencies
+        run: |
+          python -m pip install --upgrade pip pandas numpy
+          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly
 
   # Generate .py files for each notebook
       - name: Generate py files
