--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -33,10 +33,11 @@ jobs:
         run: |
           pipenv install --dev
       
+      # Some dependencies just don't run
       - name: Install Missing Python dependencies
         run: |
           python -m pip install --upgrade pip pandas numpy
-          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert
+          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly
 
   # Generate .py files for each notebook
       - name: Generate py files
