--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install Missing Python dependencies
         run: |
           python -m pip install --upgrade pip pandas numpy
-          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly
+          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly aiohttp_retry
 
   # Generate .py files for each notebook
       - name: Generate py files
