--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -20,10 +20,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
-      - name: Set up Python
+      # Set up Python and Node.js
+      - name: Set up Python and Node.js
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11
+          python-version: '3.x'
+        env:
+          NODE_OPTIONS: '--max-old-space-size=4096'
+        # Update the Node.js version to 16
+          node-version: '16'
 
       - name: Install pipenv
         run: |
