--- a/.github/workflows/value_locked_flows_update.yml
+++ b/.github/workflows/value_locked_flows_update.yml
@@ -13,7 +13,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
   # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  # We use 20.04 because this seems to fail on latest (i.e. 22.04)
+    runs-on: ubuntu-20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
