--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -39,11 +39,11 @@ jobs:
         run: |
           pipenv install --dev
       
-      # Some dependencies just don't run
-      - name: Install Missing Python dependencies
-        run: |
-          python -m pip install --upgrade pip pandas numpy
-          pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly aiohttp_retry python-dotenv
+      # # Some dependencies just don't run
+      # - name: Install Missing Python dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip pandas numpy
+      #     pip install -U kaleido asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly aiohttp_retry python-dotenv
 
   # Generate .py files for each notebook
       - name: Generate py files
@@ -66,17 +66,17 @@ jobs:
   # OP App Flows
       - name: Update OP App Net Flows
         working-directory: op_rewards_tracking
-        run: python optimism_incentives_app_net_flows.py
+        run: pipenv run python optimism_incentives_app_net_flows.py
 
   # Incentives Attribution
       - name: Update OP Incentives Attribution
         working-directory: op_rewards_tracking
-        run: python op_incentives_program_attribution.py
+        run: pipenv run python op_incentives_program_attribution.py
   
   # Incentives Program Summary
       - name: Update OP Incentives Summary
         working-directory: op_rewards_tracking
-        run: python op_incentive_program_summary.py
+        run: pipenv run python op_incentive_program_summary.py
  
         
   # commit_results:
