--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -35,16 +35,10 @@ jobs:
         run: |
           python -m pip install pipenv
 
+      # Add any missing dependencied to pipfile
       - name: Install Dependencies
         run: |
           pipenv install --dev
-      
-      # Some dependencies just don't run
-      - name: Install Missing Python dependencies
-        run: |
-          python -m pip install --upgrade pip pandas numpy
-          pip install -U kaleido 
-      #asyncio aiohttp nest_asyncio subgrounds jupyter nbconvert plotly aiohttp_retry python-dotenv
 
   # Generate .py files for each notebook
       - name: Generate py files
