--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Python and Node.js
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.11'
         # Set max space to see if this helps with timeouts
         env:
           NODE_OPTIONS: '--max-old-space-size=4096'
