--- a/.github/workflows/value_locked_flows_update.yml
+++ b/.github/workflows/value_locked_flows_update.yml
@@ -14,6 +14,9 @@ jobs:
   build:
   # The type of runner that the job will run on
     runs-on: ubuntu-20.04
+    container:
+      image: python:3.8-slim
+      options: --memory=4g # increase memory to 4GB
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
