--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Pipfile.lock
 op_rewards_tracking/csv_outputs/tvl_flows_by_token.csv
 *.pyc
 __pycache__/
+helper_functions/get_op_chain_addresses_from_repo_ms_copy.ipynb
