--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -87,6 +87,10 @@ jobs:
       
       # Commit and push output images
       # https://github.com/orgs/community/discussions/26672
+      - name: Pull changes
+        run: |
+          git pull origin main
+          
       - name: Commit files
         id: commit
         run: |
