add contracts tracking to gitignore
Former-commit-id: fd0271f9e4e693d1ef3734ea56dfa85806fe4ccf

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ Pipfile.lock
 op_rewards_tracking/csv_outputs/tvl_flows_by_token.csv
 *.pyc
 __pycache__/
+contracts_tracking/
 helper_functions/get_op_chain_addresses_from_repo_ms_copy.ipynb
