--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -102,7 +102,7 @@ jobs:
              # echo "::set-output name=push::false"
              echo "push=false" >> $GITHUB_OUTPUT
           else
-             git commit -m "GH Action Update" -a
+             git commit -m "GH Action Update - Rewards Tracking" -a
              # echo "::set-output name=push::true"
              echo "push=true" >> $GITHUB_OUTPUT
           fi
