--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -54,7 +54,9 @@ jobs:
   # OP App Flows
       - name: Update OP App Net Flows
         working-directory: op_rewards_tracking
-        run: pipenv run python optimism_incentives_app_net_flows.py
+        run: |
+          pipenv run python optimism_incentives_app_net_flows.py
+          pipenv run jupyter nbconvert --to notebook --execute op_incentive_program_summary.ipynb
   
   # Dune Data
       - name: Pull OP Usage Data in Dune
