--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ dune-client = "*"
 python-dotenv = "*"
 loguru = "*"
 plotly = "*"
-subgrounds = "*"
+subgrounds = "1.0.3"
 aiohttp_retry = "2.8.3"
 kaleido = "*"
 airtable = "*"
