--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pandas = "*"
-requests = "*"
+pandas = "1.5.3"
+requests = "2.28.2"
 jupyter = "*"
-dune-client = "*"
-python-dotenv = "*"
-loguru = "*"
-plotly = "*"
+nbconvert = "6.5.4"
+dune-client = "0.3.0"
+python-dotenv = "0.21.1"
+loguru = "0.6.0"
+plotly = "5.13.0"
 subgrounds = "1.0.3"
 aiohttp_retry = "2.8.3"
-kaleido = "*"
-airtable = "*"
+kaleido = "0.2.1"
+airtable = "0.4.8"
 notion-client = "*"
 
 [dev-packages]
