--- a/.github/workflows/op_token_distribution_tracking.yml
+++ b/.github/workflows/op_token_distribution_tracking.yml
@@ -52,11 +52,10 @@ jobs:
   # Runs a single command using the runners shell
 
   # OP App Flows
-  # pipenv run python optimism_incentives_app_net_flows.py
       - name: Update OP App Net Flows
         working-directory: op_rewards_tracking
         run: |
-          pipenv run jupyter nbconvert --to notebook --execute optimism_incentives_app_net_flows.ipynb
+          pipenv run python optimism_incentives_app_net_flows.py
           pipenv run jupyter nbconvert --to notebook --execute op_incentive_program_summary.ipynb
   
   # Dune Data
