--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pandas = "1.5.3"
-requests = "2.28.2"
+pandas = "*"
+requests = "*"
 jupyter = "*"
-nbconvert = "6.5.4"
-dune-client = "0.3.0"
-python-dotenv = "0.21.1"
-loguru = "0.6.0"
-plotly = "5.13.0"
-subgrounds = "1.0.3"
-aiohttp_retry = "2.8.3"
-kaleido = "0.2.1"
-airtable = "0.4.8"
+nbconvert = "*"
+dune-client = "*"
+python-dotenv = "*"
+loguru = "*"
+plotly = "*"
+subgrounds = "1.5.0"
+aiohttp_retry = "*"
+kaleido = "*"
+airtable = "*"
 notion-client = "*"
 
 [dev-packages]
