--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ python-dotenv = "*"
 loguru = "*"
 plotly = "*"
 subgrounds = "1.5.0"
-aiohttp_retry = "*"
+aiohttp_retry = "2.8.3"
 kaleido = "*"
 airtable = "*"
 notion-client = "*"
