--- a/.github/workflows/op_rewards_notion.yml
+++ b/.github/workflows/op_rewards_notion.yml
@@ -46,12 +46,12 @@ jobs:
         run: |
           pipenv run jupyter nbconvert --to python pull_notion_data.ipynb        
 
-  # Dune Data
+  # Notion Data
       - name: Pull Notion
         working-directory: op_rewards_tracking
         run: pipenv run python pull_notion_data.py
         env:
-          DUNE_API_KEY: ${{ secrets.NOTION_API_TOKEN }}
+          NOTION_API_TOKEN: ${{ secrets.NOTION_API_TOKEN }}
         
   # commit_results:
     # if: ${{ always() }} #Always runs even if prior jobs fail - so that one bad job doesn't f everything up.
