--- a/.github/workflows/op_rewards_notion.yml
+++ b/.github/workflows/op_rewards_notion.yml
@@ -52,6 +52,7 @@ jobs:
         run: pipenv run python pull_notion_data.py
         env:
           NOTION_API_TOKEN: ${{ secrets.NOTION_API_TOKEN }}
+          DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
         
   # commit_results:
     # if: ${{ always() }} #Always runs even if prior jobs fail - so that one bad job doesn't f everything up.
