--- a/.github/workflows/op_deployer_tracking.yml
+++ b/.github/workflows/op_deployer_tracking.yml
@@ -2,9 +2,9 @@ name: Run OP Deployer Dune -> Labs Airtable
 
 # Controls when the workflow will run
 on:
-  # Run on a schedule - Once per day at 12:10 pm
+  # Run on a schedule - Once on sundays at 5:10 am
   schedule:
-      - cron: '10 12 * * 0'
+      - cron: '10 5 * * 0'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
