--- a/.github/workflows/op_deployer_tracking.yml
+++ b/.github/workflows/op_deployer_tracking.yml
@@ -68,28 +68,28 @@ jobs:
       
       # Commit and push output images
       # https://github.com/orgs/community/discussions/26672
-      - name: Pull changes
-        run: |
-          git pull origin main
+#       - name: Pull changes
+#         run: |
+#           git pull origin main
           
-      - name: Commit files
-        id: commit
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "github-actions"
-          git add --all
-          # https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
-          if [-z "$(git status --porcelain)"]; then
-             # echo "::set-output name=push::false"
-             echo "push=false" >> $GITHUB_OUTPUT
-          else
-             git commit -m "GH Action Update - Rewards Tracking" -a
-             # echo "::set-output name=push::true"
-             echo "push=true" >> $GITHUB_OUTPUT
-          fi
-        shell: bash
-      - name: Push changes
-        if: steps.commit.outputs.push == 'true'
-        uses: ad-m/github-push-action@master
-        with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Commit files
+#         id: commit
+#         run: |
+#           git config --local user.email "action@github.com"
+#           git config --local user.name "github-actions"
+#           git add --all
+#           # https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
+#           if [-z "$(git status --porcelain)"]; then
+#              # echo "::set-output name=push::false"
+#              echo "push=false" >> $GITHUB_OUTPUT
+#           else
+#              git commit -m "GH Action Update - Rewards Tracking" -a
+#              # echo "::set-output name=push::true"
+#              echo "push=true" >> $GITHUB_OUTPUT
+#           fi
+#         shell: bash
+#       - name: Push changes
+#         if: steps.commit.outputs.push == 'true'
+#         uses: ad-m/github-push-action@master
+#         with:
+#            github_token: ${{ secrets.GITHUB_TOKEN }}
