--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ dune-client = "*"
 python-dotenv = "*"
 loguru = "*"
 plotly = "*"
-subgrounds = "1.5.0"
+subgrounds = "*"
 aiohttp_retry = "2.8.3"
 kaleido = "*"
 airtable = "*"
