--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,8 @@ dune-client = "*"
 python-dotenv = "*"
 loguru = "*"
 plotly = "*"
-subgrounds = "=>1.5.0"
-aiohttp_retry = "=>2.8.3"
+subgrounds = ">= 1.5.0"
+aiohttp_retry = ">= 2.8.3"
 kaleido = "*"
 airtable = "*"
 notion-client = "*"
