--- a/.github/workflows/op_stack_chain_daily_revenue.yml
+++ b/.github/workflows/op_stack_chain_daily_revenue.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Run File
         working-directory: op_chains_tracking
         run: pipenv run python l2_revenue_tracking.py
+        env:
+          DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
 
 
     # commit_results:
