--- a/.github/workflows/op_stack_chain_revenue.yml
+++ b/.github/workflows/op_stack_chain_revenue.yml
@@ -1,10 +1,10 @@
-name: OP Stack Chain Daily Revenue Pulls
+name: OP Stack Chain Revenue Pulls
 
 # Controls when the workflow will run
 on:
   # Run on a schedule - Once per day at 11:57 pm - few mins for dependencies to install
   schedule:
-      - cron: '57 11 * * *'
+      - cron: '57 * * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
