--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ loguru = "*"
 plotly = "*"
 subgrounds = "*"
 aiohttp_retry = "== 2.8.3"
-kaleido = "*"
+kaleido = "0.2.1"
 airtable = "*"
 notion-client = "*"
 notion-df = "*"
