--- a/.github/workflows/other_chains_uploads.yml
+++ b/.github/workflows/other_chains_uploads.yml
@@ -1,10 +1,10 @@
-name: Daily Dune Uploads
+name: Daily Other Chains Uploads
 
 # Controls when the workflow will run
 on:
-  # Run on a schedule - Mon, Wed at 8am utc (3am est)
+  # Run on a schedule - 12:01 AM every day
   schedule:
-      - cron: '2 0 * * *'
+      - cron: 1 0 * * *
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -42,15 +42,19 @@ jobs:
 
   # Generate .py files for each notebook
       - name: Generate py files
-        working-directory: value_locked_flows
+        working-directory: other_chains_tracking
         run: |
-          pipenv run jupyter nbconvert --to python chain_tvl_trends.ipynb        
+          pipenv run jupyter nbconvert --to python chain_tvl_trends.ipynb   
+          pipenv run jupyter nbconvert --to python pull_l2_activity.ipynb   
+               
 
-  # Run Dune -> Airtable
+  # Run py files
       - name: Run Dune Uploads
-        working-directory: value_locked_flows
+        working-directory: other_chains_tracking
         run: |
           pipenv run python chain_tvl_trends.py
+          pipenv run python pull_l2_activity.py
+        
         env:
           DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
         
