--- a/.github/workflows/package_update.yml
+++ b/.github/workflows/package_update.yml
@@ -1,6 +1,11 @@
 name: Python Package Installation
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]  # Adjust this if your main branch has a different name
+  pull_request:
+    branches: [ main ]  # Adjust this if your main branch has a different name
+  workflow_dispatch:  # This allows manual triggering
 
 jobs:
   build:
@@ -19,35 +24,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
 
-    - name: Install dependencies incrementally
+    - name: Install dependencies from lock file
+      run: pipenv sync --dev
+
+    - name: If lock file install fails, update and retry
+      if: failure()
       run: |
-        echo "[[source]]
-        url = \"https://pypi.org/simple\"
-        verify_ssl = true
-        name = \"pypi\"
-
-        [packages]
-        requests = \">=2.32.0\"
-
-        [requires]
-        python_version = \"3.10.11\"
-
-        [pipenv]
-        allow_prereleases = true" > Pipfile
-
-        pipenv install
-        
-        for package in pandas numpy pydantic jupyter plotly google-cloud-bigquery web3 dune-client subgrounds flipside
-        do
-          echo "Installing $package"
-          pipenv install $package || echo "Failed to install $package, skipping"
-        done
-
-        pipenv graph
-
-    - name: Install remaining packages with pip
-      run: |
-        pipenv run pip install aiohttp_retry==2.8.3 kaleido==0.2.1 airtable dataclasses_json db-dtypes clickhouse-connect tzlocal hexbytes google-cloud google-auth
+        pipenv lock
+        pipenv sync --dev
 
     - name: Show installed packages
       run: pipenv graph
